# SCM_workshop

./: Exercises_on_ECHAM-HAM-SCM.md  Makefile.am  Makefile.in  README  README_echam6  SSH_SSHFS.md  aclocal.m4  configure.ac  configure.cscs  echam6_base_version.txt  ioColumn.patch  scm-patch.patch  settings_patch_scm.generic.patch  stdatm_form_diss.nc
.svn/: all-wcprops  dir-prop-base  entries
blas/: Makefile.am  Makefile.in
blas/.svn/: all-wcprops  entries
cdi/: ChangeLog  configure.ac
config/: createMakefiles.pl  mh-aix  mh-darwin_ori  mh-linux-nechpc  mh-linux_ori  mh-solaris_untested
doc/: ECHAM-HAMMOZ_namelists.tex  hammoz_v2.doc
echam6_inherited/: Makefile  hack15-t127.config  ham6run_SCM.linux_x86-64
include/: cbalance_ctl.inc  columnctl.inc  fire_jsbach_ctl.inc  fire_thonicke_ctl.inc  flighttrackctl.inc  forcing_ctl.inc  ham_salsactl.inc  ham_vbsctl.inc  hdalone_ctl.inc  hratesctl.inc  jsbalone_ctl.inc  jsbalone_parctl.inc  mvctl.inc  mvstreamctl.inc  physctl.inc  radctl.inc_ori  set_flighttrack_element.inc  submodelctl.inc  tdiagctl.inc
jobscript_toolkit_ancillaries/: get_input_file_choices.sh
jsbach/: cbalone_driver.f90  diag_water_balance.f90  jsbalone_driver.f90  mo_cbalone_memory.f90
lapack/: Makefile.am  Makefile.in
lapack/.svn/: all-wcprops  entries
m4/: ax_compiler_version.m4  ax_lib_cdi.m4  ax_lib_postgresql.m4  ax_lib_yaxt.m4
src/: Makefile.am  Makefile.in  Makefile.in_ori  clsst.f90  clveg.f90  collect.f90  dyn.f90  ewd.f90  fftd.f90  ffti.f90  geopot.f90  inhysi.f90  inictl.f90  inictl.f90_ori  iniphy.f90  init_decomposition.f90  initialize.f90  ioinitial.f90  ionwp.f90  ltd.f90  lti.f90  master.f90_ori  ml_ocean.f90  mo_activ.f90  mo_aero_volc_tab.f90  mo_aero_volc_tab.f90_ori  mo_atmosphere.f90  mo_bethy_constants.f90  mo_boundary_condition.f90_ori  mo_buffer_fft.f90  mo_canopy.f90  mo_cbal_cpools.f90  mo_ccnclim.f90  mo_cirrus.f90  mo_cloud.f90  mo_cloud.f90_ori  mo_co2.f90  mo_cosp_isccp_simulator.f90  mo_cosp_lidar.f90  mo_cosp_metoff_cosp.f90  (+184 more)
support/: Makefile.am
support/.svn/: all-wcprops  entries
support/.svn/text-base/: Makefile.in.svn-base  util_buffer_pool.c.svn-base  util_logging.c.svn-base  util_sysinfo.c.svn-base
test/: compile_echam6.sh  test_all.sh  test_echam6_test_links.sh  test_echam6_test_namelists.sh  test_nproma.sh  test_parallelnproma.sh  test_parallelnpromarerunsubmodeloff.sh  test_single.sh  test_submodeloff.sh  test_update.sh
util/quickplots/: ATMerain_quick_zon.ncl  ATMerain_quicklog_zon.ncl  ATMlog_diff.ncl  ATMquick_diff_lola.ncl  BOTerain_quicky.ncl  Makefile.am  Makefile.in  PREPAREdiff_bot_ncl  README.txt  TABLE_job  dummy.eps  echam6.varCode  make_six_atm  make_six_diff_atm  make_six_diff_bot  make_six_diff_log  table.f90
util/quickplots/.svn/: all-wcprops  dir-prop-base  entries
util/quickplots/.svn/text-base/: ATMerain_quick_lola.ncl.svn-base  ATMquick_diff_zon.ncl.svn-base  BOTquick_diff.ncl.svn-base  PREPAREatm_erain_ncl.svn-base  PREPAREatmlog_erain_ncl.svn-base  PREPAREbot_erain_ncl.svn-base  PREPAREdiff_atm_ncl.svn-base  PREPAREdiff_atmlog_ncl.svn-base  TABLEdiff_job.svn-base  make_six_bot.svn-base  make_six_log.svn-base  mo_tables.f90.svn-base  mo_tables_diff.f90.svn-base  mo_util_string.f90.svn-base  sixplot_latex.sh.svn-base  table_diff.f90.svn-base
yaxt/inst_headers/: Makefile.am
yaxt/inst_headers/.svn/: all-wcprops  entries
yaxt/inst_headers/.svn/text-base/: Makefile.in.svn-base
yaxt/inst_headers/f90/: Makefile.am
yaxt/inst_headers/f90/.svn/: all-wcprops  entries
yaxt/inst_headers/f90/.svn/text-base/: Makefile.in.svn-base
yaxt/tests/: Makefile.am  test_exchanger_parallel_run.in  test_exported_symbols.in  test_handles.c  test_handles_run.in  test_idxempty.c  test_idxempty_f.f90  test_idxempty_run.in  test_idxlist_utils.c  test_idxmod_run.in  test_idxsection.c  test_idxstripes.c  test_idxvec_f.f90  test_initialized_finalized.c  test_initialized_finalized_f.f90  test_initialized_finalized_run.in  test_mpi_generate_datatype_run.in  test_mpi_smartdedup_run.in  test_perf.f90  test_perf_stripes.f90  test_perf_stripes_run.in  test_redist_collection_parallel_run.in  test_redist_collection_static_f.f90  test_redist_collection_static_parallel.c  test_redist_collection_static_parallel_f.f90  test_redist_collection_static_run.in  test_redist_p2p_f.f90  test_redist_p2p_parallel_f.f90  test_redist_p2p_parallel_run.in  test_redist_repeat.c  test_redist_repeat_parallel.c  test_redist_repeat_parallel_run.in  test_redist_repeat_run.in  test_sort_run.in  test_ut.f90  test_xmap_all2all.c  test_xmap_all2all_f.f90  test_xmap_all2all_fail.c  test_xmap_all2all_fail_f.f90  test_xmap_all2all_parallel.c  (+8 more)
yaxt/tests/.svn/: all-wcprops  entries
yaxt/tests/.svn/text-base/: Makefile.in.svn-base  core.svn-base  ftest_common.f90.svn-base  test_exchanger_parallel.c.svn-base  test_idxlist_collection.c.svn-base  test_idxlist_collection_f.f90.svn-base  test_idxlist_collection_run.in.svn-base  test_idxlist_utils.h.svn-base  test_idxlist_utils_f.f90.svn-base  test_idxmod.c.svn-base  test_idxmod_f.f90.svn-base  test_idxsection_f.f90.svn-base  test_idxsection_run.in.svn-base  test_idxstripes_f.f90.svn-base  test_idxstripes_run.in.svn-base  test_idxvec.c.svn-base  test_idxvec_run.in.svn-base  test_mpi_generate_datatype.c.svn-base  test_mpi_smartdedup.c.svn-base  test_perf_run.in.svn-base  test_redist_collection.c.svn-base  test_redist_collection_f.f90.svn-base  test_redist_collection_parallel.c.svn-base  test_redist_collection_parallel_f.f90.svn-base  test_redist_collection_run.in.svn-base  test_redist_collection_static.c.svn-base  test_redist_collection_static_parallel_run.in.svn-base  test_redist_common_f.f90.svn-base  test_redist_p2p.c.svn-base  test_redist_p2p_parallel.c.svn-base  test_redist_p2p_run.in.svn-base  test_redist_repeat_f.f90.svn-base  test_redist_repeat_parallel_f.f90.svn-base  test_sort.c.svn-base  test_uid.c.svn-base  test_ut_run.in.svn-base  test_xmap_all2all_fail_run.in.svn-base  test_xmap_all2all_parallel_run.in.svn-base  test_xmap_all2all_run.in.svn-base  test_xmap_common.c.svn-base  (+10 more)
(+1203 files in other folders)
