lib_LTLIBRARIES = libblas.la
libblas_la_SOURCES = \
	dasum.f \
	daxpy.f \
	dcabs1.f \
	dcopy.f \
	ddot.f \
	dgbmv.f \
	dgemm.f \
	dgemv.f \
	dger.f \
	dnrm2.f \
	drot.f \
	drotg.f \
	drotm.f \
	drotmg.f \
	dsbmv.f \
	dscal.f \
	dsdot.f \
	dspmv.f \
	dspr.f \
	dspr2.f \
	dswap.f \
	dsymm.f \
	dsymv.f \
	dsyr.f \
	dsyr2.f \
	dsyr2k.f \
	dsyrk.f \
	dtbmv.f \
	dtbsv.f \
	dtpmv.f \
	dtpsv.f \
	dtrmm.f \
	dtrmv.f \
	dtrsm.f \
	dtrsv.f \
	dzasum.f \
	dznrm2.f \
	icamax.f \
	idamax.f \
	isamax.f \
	izamax.f \
	lsame.f \
	scabs1.f \
	sdot.f \
	sgemv.f \
	sgemm.f \
	sger.f \
	sscal.f \
	ssyrk.f \
	sswap.f \
	strsm.f \
	xerbla.f \
	xerbla_array.f
