lib_LTLIBRARIES = liblapack.la
liblapack_la_LIBADD = ../blas/libblas.la
liblapack_la_SOURCES = \
	chla_transtype.f \
	dbbcsd.f \
	dbdsdc.f \
	dbdsqr.f \
	ddisna.f \
	dgbbrd.f \
	dgbcon.f \
	dgbequ.f \
	dgbequb.f \
	dgbrfs.f \
	dgbsv.f \
	dgbsvx.f \
	dgbtf2.f \
	dgbtrf.f \
	dgbtrs.f \
	dgebak.f \
	dgebal.f \
	dgebd2.f \
	dgebrd.f \
	dgecon.f \
	dgeequ.f \
	dgeequb.f \
	dgees.f \
	dgeesx.f \
	dgeev.f \
	dgeevx.f \
	dgegs.f \
	dgegv.f \
	dgehd2.f \
	dgehrd.f \
	dgejsv.f \
	dgelq2.f \
	dgelqf.f \
	dgels.f \
	dgelsd.f \
	dgelss.f \
	dgelsx.f \
	dgelsy.f \
	dgemqrt.f \
	dgeql2.f \
	dgeqlf.f \
	dgeqp3.f \
	dgeqpf.f \
	dgeqr2.f \
	dgeqr2p.f \
	dgeqrf.f \
	dgeqrfp.f \
	dgeqrt.f \
	dgeqrt2.f \
	dgeqrt3.f \
	dgerfs.f \
	dgerq2.f \
	dgerqf.f \
	dgesc2.f \
	dgesdd.f \
	dgesv.f \
	dgesvd.f \
	dgesvj.f \
	dgesvx.f \
	dgetc2.f \
	dgetf2.f \
	dgetrf.f \
	dgetri.f \
	dgetrs.f \
	dggbak.f \
	dggbal.f \
	dgges.f \
	dggesx.f \
	dggev.f \
	dggevx.f \
	dggglm.f \
	dgghrd.f \
	dgglse.f \
	dggqrf.f \
	dggrqf.f \
	dggsvd.f \
	dggsvp.f \
	dgsvj0.f \
	dgsvj1.f \
	dgtcon.f \
	dgtrfs.f \
	dgtsv.f \
	dgtsvx.f \
	dgttrf.f \
	dgttrs.f \
	dgtts2.f \
	dhgeqz.f \
	dhsein.f \
	dhseqr.f \
	disnan.f \
	dla_gbamv.f \
	dla_gbrcond.f \
	dla_gbrpvgrw.f \
	dla_geamv.f \
	dla_gercond.f \
	dla_gerpvgrw.f \
	dla_lin_berr.f \
	dla_porcond.f \
	dla_porpvgrw.f \
	dla_syamv.f \
	dla_syrcond.f \
	dla_syrpvgrw.f \
	dla_wwaddw.f \
	dlabad.f \
	dlabrd.f \
	dlacn2.f \
	dlacon.f \
	dlacpy.f \
	dladiv.f \
	dlae2.f \
	dlaebz.f \
	dlaed0.f \
	dlaed1.f \
	dlaed2.f \
	dlaed3.f \
	dlaed4.f \
	dlaed5.f \
	dlaed6.f \
	dlaed7.f \
	dlaed8.f \
	dlaed9.f \
	dlaeda.f \
	dlaein.f \
	dlaev2.f \
	dlaexc.f \
	dlag2.f \
	dlag2s.f \
	dlags2.f \
	dlagtf.f \
	dlagtm.f \
	dlagts.f \
	dlagv2.f \
	dlahqr.f \
	dlahr2.f \
	dlahrd.f \
	dlaic1.f \
	dlaisnan.f \
	dlaln2.f \
	dlals0.f \
	dlalsa.f \
	dlalsd.f \
	dlamch.f \
	dlamrg.f \
	dlaneg.f \
	dlangb.f \
	dlange.f \
	dlangt.f \
	dlanhs.f \
	dlansb.f \
	dlansf.f \
	dlansp.f \
	dlanst.f \
	dlansy.f \
	dlantb.f \
	dlantp.f \
	dlantr.f \
	dlanv2.f \
	dlapll.f \
	dlapmr.f \
	dlapmt.f \
	dlapy2.f \
	dlapy3.f \
	dlaqgb.f \
	dlaqge.f \
	dlaqp2.f \
	dlaqps.f \
	dlaqr0.f \
	dlaqr1.f \
	dlaqr2.f \
	dlaqr3.f \
	dlaqr4.f \
	dlaqr5.f \
	dlaqsb.f \
	dlaqsp.f \
	dlaqsy.f \
	dlaqtr.f \
	dlar1v.f \
	dlar2v.f \
	dlarf.f \
	dlarfb.f \
	dlarfg.f \
	dlarfgp.f \
	dlarft.f \
	dlarfx.f \
	dlargv.f \
	dlarnv.f \
	dlarra.f \
	dlarrb.f \
	dlarrc.f \
	dlarrd.f \
	dlarre.f \
	dlarrf.f \
	dlarrj.f \
	dlarrk.f \
	dlarrr.f \
	dlarrv.f \
	dlarscl2.f \
	dlartg.f \
	dlartgp.f \
	dlartgs.f \
	dlartv.f \
	dlaruv.f \
	dlarz.f \
	dlarzb.f \
	dlarzt.f \
	dlas2.f \
	dlascl.f \
	dlascl2.f \
	dlasd0.f \
	dlasd1.f \
	dlasd2.f \
	dlasd3.f \
	dlasd4.f \
	dlasd5.f \
	dlasd6.f \
	dlasd7.f \
	dlasd8.f \
	dlasda.f \
	dlasdq.f \
	dlasdt.f \
	dlaset.f \
	dlasq1.f \
	dlasq2.f \
	dlasq3.f \
	dlasq4.f \
	dlasq5.f \
	dlasq6.f \
	dlasr.f \
	dlasrt.f \
	dlassq.f \
	dlasv2.f \
	dlaswp.f \
	dlasy2.f \
	dlasyf.f \
	dlat2s.f \
	dlatbs.f \
	dlatdf.f \
	dlatps.f \
	dlatrd.f \
	dlatrs.f \
	dlatrz.f \
	dlatzm.f \
	dlauu2.f \
	dlauum.f \
	dopgtr.f \
	dopmtr.f \
	dorbdb.f \
	dorcsd.f \
	dorg2l.f \
	dorg2r.f \
	dorgbr.f \
	dorghr.f \
	dorgl2.f \
	dorglq.f \
	dorgql.f \
	dorgqr.f \
	dorgr2.f \
	dorgrq.f \
	dorgtr.f \
	dorm2l.f \
	dorm2r.f \
	dormbr.f \
	dormhr.f \
	dorml2.f \
	dormlq.f \
	dormql.f \
	dormqr.f \
	dormr2.f \
	dormr3.f \
	dormrq.f \
	dormrz.f \
	dormtr.f \
	dpbcon.f \
	dpbequ.f \
	dpbrfs.f \
	dpbstf.f \
	dpbsv.f \
	dpbsvx.f \
	dpbtf2.f \
	dpbtrf.f \
	dpbtrs.f \
	dpftrf.f \
	dpftri.f \
	dpftrs.f \
	dpocon.f \
	dpoequ.f \
	dpoequb.f \
	dporfs.f \
	dposv.f \
	dposvx.f \
	dpotf2.f \
	dpotrf.f \
	dpotri.f \
	dpotrs.f \
	dppcon.f \
	dppequ.f \
	dpprfs.f \
	dppsv.f \
	dppsvx.f \
	dpptrf.f \
	dpptri.f \
	dpptrs.f \
	dpstf2.f \
	dpstrf.f \
	dptcon.f \
	dpteqr.f \
	dptrfs.f \
	dptsv.f \
	dptsvx.f \
	dpttrf.f \
	dpttrs.f \
	dptts2.f \
	drscl.f \
	dsbev.f \
	dsbevd.f \
	dsbevx.f \
	dsbgst.f \
	dsbgv.f \
	dsbgvd.f \
	dsbgvx.f \
	dsbtrd.f \
	dsfrk.f \
	dsgesv.f \
	dspcon.f \
	dspev.f \
	dspevd.f \
	dspevx.f \
	dspgst.f \
	dspgv.f \
	dspgvd.f \
	dspgvx.f \
	dsposv.f \
	dsprfs.f \
	dspsv.f \
	dspsvx.f \
	dsptrd.f \
	dsptrf.f \
	dsptri.f \
	dsptrs.f \
	dstebz.f \
	dstedc.f \
	dstegr.f \
	dstein.f \
	dstemr.f \
	dsteqr.f \
	dsterf.f \
	dstev.f \
	dstevd.f \
	dstevr.f \
	dstevx.f \
	dsycon.f \
	dsyconv.f \
	dsyequb.f \
	dsyev.f \
	dsyevd.f \
	dsyevr.f \
	dsyevx.f \
	dsygs2.f \
	dsygst.f \
	dsygv.f \
	dsygvd.f \
	dsygvx.f \
	dsyrfs.f \
	dsysv.f \
	dsysvx.f \
	dsyswapr.f \
	dsytd2.f \
	dsytf2.f \
	dsytrd.f \
	dsytrf.f \
	dsytri.f \
	dsytri2.f \
	dsytri2x.f \
	dsytrs.f \
	dsytrs2.f \
	dtbcon.f \
	dtbrfs.f \
	dtbtrs.f \
	dtfsm.f \
	dtftri.f \
	dtfttp.f \
	dtfttr.f \
	dtgevc.f \
	dtgex2.f \
	dtgexc.f \
	dtgsen.f \
	dtgsja.f \
	dtgsna.f \
	dtgsy2.f \
	dtgsyl.f \
	dtpcon.f \
	dtpmqrt.f \
	dtpqrt.f \
	dtpqrt2.f \
	dtprfb.f \
	dtprfs.f \
	dtptri.f \
	dtptrs.f \
	dtpttf.f \
	dtpttr.f \
	dtrcon.f \
	dtrevc.f \
	dtrexc.f \
	dtrrfs.f \
	dtrsen.f \
	dtrsna.f \
	dtrsyl.f \
	dtrti2.f \
	dtrtri.f \
	dtrtrs.f \
	dtrttf.f \
	dtrttp.f \
	dtzrqf.f \
	dtzrzf.f \
	dzsum1.f \
	icmax1.f \
	ieeeck.f \
	ilaclc.f \
	ilaclr.f \
	iladiag.f \
	iladlc.f \
	iladlr.f \
	ilaenv.f \
	ilaprec.f \
	ilaslc.f \
	ilaslr.f \
	ilatrans.f \
	ilauplo.f \
	ilaver.f \
	ilazlc.f \
	ilazlr.f \
	iparmq.f \
	izmax1.f \
	sgetf2.f \
	sgetrf.f \
	sgetrs.f \
	sisnan.f \
	slag2d.f \
	slaisnan.f \
	slamch.f \
	slaswp.f \
	spotf2.f \
	spotrf.f \
	spotrs.f

